<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="5">

    <ImageView
        android:id="@+id/couponImage"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:contentDescription="@string/accessability_current_item_logo"
        android:scaleType="center"
        android:src="@drawable/kraftly_coupon" />

    <TextView
        android:id="@+id/couponsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:text="@string/dummy_text_coupon_details"
        android:textAlignment="center" />

    <Button
        android:id="@+id/activateCouponBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight=".5"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/dummy_button_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/viewOffersTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_weight=".5"
        android:text="@string/dummy_view_offers_text"
        android:textSize="12sp" />
</LinearLayout>